--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                paper for the Internatonal Conference on Computer Scence and
                Engneerng and IEEE wth my academc advsors. I have co-authored a
                paper ttled “Deep Learning based Form Recoginiton”. I continue to
-               develop projects n the feld of computer vison.
+               develop projects n the feld of computer vision.
             </p>
 
             <div class="row">
@@ -234,9 +234,7 @@
                   <p class="info">First Author <span>&bull;</span> <em class="date">September 2024</em></p>
       
                   <p>
-                     Presented the research paper titled <strong>"Deep Learning-based Order Form Recognition"</strong> at the UBMK 2024 conference hosted by Akdeniz University. 
-                     The paper was co-authored with three colleagues and later published in an IEEE journal. The study focused on applying deep learning techniques for 
-                     optical character recognition in order forms, achieving significant advancements in real-time processing and accuracy.
+                     Presented the research paper titled <strong>Deep Learning-based Order Form Recognition</strong> at the UBMK 2024 conference hosted by Akdeniz University. The paper was co-authored with three academic advisors and later published in an IEEE journal. The study focused on applying deep learning techniques for optical character recognition in order forms, achieving significant advancements in real-time processing and accuracy
                   </p>
                </div>
       
